--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="swiper-wrapper relative">
           <div class="swiper-slide">
             <img
-              src="/_/img/image.jpg"
+              src="/img/image.jpg"
               alt=""
               class="w-full h-full object-cover absolute top-0 left-0 -z-10"
             />
