All Image path Change

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/_/css/swiper.min.css" rel="stylesheet" />
-    <link href="/_/css/custom.css" rel="stylesheet" />
+    <link href="/assets/css/swiper.min.css" rel="stylesheet" />
+    <link href="/assets/css/custom.css" rel="stylesheet" />
     <link href="./output/output.min.css" rel="stylesheet" />
     <title>Portfolio | Ishtiak</title>
   </head>
@@ -15,7 +15,7 @@
       <div class="holder">
         <div class="flex justify-between items-center">
           <div class="w-48">
-            <a href="index.html"> <img src="./_/img/Logo.svg" alt="Ishtiak" /></a>
+            <a href="index.html"> <img src="./assets/img/Logo.svg" alt="Ishtiak" /></a>
           </div>
           <nav>
             <ul class="flex items-center gap-16 text-white">
@@ -59,7 +59,7 @@
         <div class="swiper-wrapper relative">
           <div class="swiper-slide">
             <img
-              src="/img/image.jpg"
+              src="./assets/img/image.jpg"
               alt=""
               class="w-full h-full object-cover absolute top-0 left-0 -z-10"
             />
@@ -67,7 +67,7 @@
 
           <div class="swiper-slide">
             <img
-              src="./_/img/image2.jpg"
+              src="./assets/img/image2.jpg"
               alt=""
               class="w-full h-full object-cover absolute top-0 left-0 -z-10"
             />
@@ -75,21 +75,21 @@
 
           <div class="swiper-slide">
             <img
-              src="./_/img/image3.jpg"
+              src="./assets/img/image3.jpg"
               alt=""
               class="w-full h-full object-cover absolute top-0 left-0 -z-10"
             />
           </div>
           <div class="swiper-slide">
             <img
-              src="./_/img/image4.jpg"
+              src="./assets/img/image4.jpg"
               alt=""
               class="w-full h-full object-cover absolute top-0 left-0 -z-10"
             />
           </div>
           <div class="swiper-slide">
             <img
-              src="./_/img/image5.jpg"
+              src="./assets/img/image5.jpg"
               alt=""
               class="w-full h-full object-cover absolute top-0 left-0 -z-10"
             />
@@ -187,7 +187,7 @@
               class="flex flex-col justify-end relative overflow-hidden group"
             >
               <img
-                src="./_/img/image.jpg"
+                src="./assets/img/image.jpg"
                 alt="Cover"
                 class="object-cover h-full w-full transition-all group-hover:scale-105 hover:duration-1000"
               />
@@ -201,7 +201,7 @@
               class="flex flex-col justify-end relative overflow-hidden group"
             >
               <img
-                src="./_/img/image2.jpg"
+                src="./assets/img/image2.jpg"
                 alt="Cover"
                 class="object-cover h-full w-full transition-all group-hover:scale-105 hover:duration-1000"
               />
@@ -215,7 +215,7 @@
               class="flex flex-col justify-end relative overflow-hidden group"
             >
               <img
-                src="./_/img/image4.jpg"
+                src="./assets/img/image4.jpg"
                 alt="Cover"
                 class="object-cover h-full w-full transition-all group-hover:scale-105 hover:duration-1000"
               />
@@ -229,7 +229,7 @@
               class="flex flex-col justify-end relative overflow-hidden group"
             >
               <img
-                src="./_/img/image5.jpg"
+                src="./assets/img/image5.jpg"
                 alt="Cover"
                 class="object-cover h-full w-full transition-all group-hover:scale-105 hover:duration-1000"
               />
@@ -251,7 +251,7 @@
           <div class="lg:col-span-3 w-full aspect-[397/265] order-1 md:order-2">
             <img
               class="w-full h-full object-cover"
-              src="/_/img/image5.jpg"
+              src="/assets/img/image5.jpg"
               alt="Empowering Local Talent"
             />
           </div>
@@ -331,9 +331,9 @@
   </section>
   <!-- End of Dark Forms sections -->
 
-    <script src="./_/js/jquery.min.js"></script>
-    <script src="./_/js/swiper.min.js"></script>
-    <script src="./_/js/magnific-popup.min.js"></script>
-    <script src="./_/js/script.js"></script>
+    <script src="./assets/js/jquery.min.js"></script>
+    <script src="./assets/js/swiper.min.js"></script>
+    <script src="./assets/js/magnific-popup.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
