some pages added

--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/assets/css/swiper.min.css" rel="stylesheet" />
     <link href="./output/output.min.css" rel="stylesheet" />
-    <title>Home | Ishtiak</title>
+    <title>Contact | Ishtiak</title>
   </head>
   <body>
-    <div class="cursor"></div>
     <!-- Start of the header block -->
-    <header class="py-6 bg-black z-40 w-full floating-header">
+    <header class="py-8 bg-transparent absolute z-40 w-full floating-header">
       <div class="holder">
-        <div class="flex justify-between items-center gap-8">
+        <div class="flex justify-between items-center gap-8 pb-8 md:pb-0">
           <h1>
             <a id="menuIcon" href="/">
               <svg
@@ -44,38 +43,6 @@
             </li>
             <li class="group relative">
               <a
-                href="/sevices.html"
-                class="uppercase text-base font-medium leading-[140%] tracking-[0.8px] pb-1 before-effect"
-              >
-                Sevices
-              </a>
-            </li>
-            <li class="group relative">
-              <a
-                href="/skills.html"
-                class="uppercase text-base font-medium leading-[140%] tracking-[0.8px] pb-1 before-effect"
-              >
-                Skills
-              </a>
-            </li>
-            <li class="group relative">
-              <a
-                href="/education.html"
-                class="uppercase text-base font-medium leading-[140%] tracking-[0.8px] pb-1 before-effect"
-              >
-                Education
-              </a>
-            </li>
-            <li class="group relative">
-              <a
-                href="/experience.html"
-                class="uppercase text-base font-medium leading-[140%] tracking-[0.8px] pb-1 before-effect"
-              >
-                Experience
-              </a>
-            </li>
-            <li class="group relative">
-              <a
                 href="/contact.html"
                 class="uppercase text-base font-medium leading-[140%] tracking-[0.8px] pb-1 before-effect"
               >
@@ -83,26 +50,6 @@
               </a>
             </li>
           </ul>
-
-          <!-- <ul class="text-white hidden md:flex items-center gap-11">
-            <li class="group relative">
-              <a
-                href="/"
-                class="uppercase text-base font-medium leading-[140%] tracking-[0.8px] relative inline-block"
-              >
-                About
-              </a>
-            </li>
-            <li class="group relative">
-              <a
-                href="/"
-                class="uppercase text-base font-medium leading-[140%] tracking-[0.8px] relative inline-block"
-              >
-                Contact
-              </a>
-            </li>
-          </ul> -->
-
           <div class="md:hidden flex items-center">
             <button
               id="menu-active"
@@ -144,82 +91,6 @@
             </a>
           </li>
           <li>
-            <a href="./sevices.html"
-              >Sevices
-              <svg
-                width="22"
-                height="8"
-                viewBox="0 0 22 8"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M20.0946 3.47949L0 3.47949L1.19209e-07 4.52116L20.0951 4.52116L18.1992 6.56283L18.9625 7.27163L22 4.00056L18.9625 0.729492L18.1992 1.4383L20.0946 3.47949Z"
-                  fill="white"
-                ></path>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="./skills.html"
-              >Skills
-              <svg
-                width="22"
-                height="8"
-                viewBox="0 0 22 8"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M20.0946 3.47949L0 3.47949L1.19209e-07 4.52116L20.0951 4.52116L18.1992 6.56283L18.9625 7.27163L22 4.00056L18.9625 0.729492L18.1992 1.4383L20.0946 3.47949Z"
-                  fill="white"
-                ></path>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="./education.html"
-              >Education
-              <svg
-                width="22"
-                height="8"
-                viewBox="0 0 22 8"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M20.0946 3.47949L0 3.47949L1.19209e-07 4.52116L20.0951 4.52116L18.1992 6.56283L18.9625 7.27163L22 4.00056L18.9625 0.729492L18.1992 1.4383L20.0946 3.47949Z"
-                  fill="white"
-                ></path>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="./experience.html"
-              >Experience
-              <svg
-                width="22"
-                height="8"
-                viewBox="0 0 22 8"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M20.0946 3.47949L0 3.47949L1.19209e-07 4.52116L20.0951 4.52116L18.1992 6.56283L18.9625 7.27163L22 4.00056L18.9625 0.729492L18.1992 1.4383L20.0946 3.47949Z"
-                  fill="white"
-                ></path>
-              </svg>
-            </a>
-          </li>
-          <li>
             <a href="./contact.html"
               >Contact
               <svg
@@ -243,56 +114,94 @@
     </header>
     <!-- End of the header block -->
 
-    <section class="py-8">
-      <div class="holder">
-        <div
-          class="flex justify-center items-center flex-col text-center space-y-5 max-w-5xl mx-auto [&>h2]:font-Lato"
-        >
-          <h2>Hi <br />I'm Ishtiak Sami <br />Frontend Developer</h2>
-          <p>
-            I'm a passionate Front-end Developer based in Aftabnagar, Dhaka,
-            with expertise in HTML, CSS, JavaScript, and PHP. I have a strong
-            command of frontend frameworks like React.js and Next.js, as well as
-            CSS frameworks such as Tailwind and Bootstrap. I have programming
-            knowledge extends to database management using MySQL. Currently
-            working at Skylark Creative, I'm specializes in building visually
-            appealing and user-friendly web interfaces. I'm also proficient in
-            tools like Visual Studio Code, Figma, and Git. Fluent in both
-            English and Bangla, I'm expanding my expertise in Backend
-            Development to become a Full-stack Developer.
-          </p>
-          <div class="pt-3 flex items-center flex-wrap gap-30">
-            <a href="./contact.html" class="btn uppercase">Contact me </a>
-            <a href="./contact.html" class="btn uppercase">Resume</a>
+    <!-- Start of the banner block -->
+    <section
+      class="bg-black relative flex flex-col items-center justify-end after:absolute after:h-full after:w-full after:left-0 after:top-0 after:bg-gradient-to-b after:from-black after:to-transparent after:opacity-50"
+    >
+      <div class="absolute left-0 top-32 w-full z-10" data-scroll="">
+        <div class="holder">
+          <div
+            class="text-white overflow-hidden text-sm font-medium leading-[140%] uppercase z-10"
+          >
+            <a
+              class="text-white/50 hover:text-white transition-all duration-300"
+              href="/"
+              >Home</a
+            >&nbsp;&nbsp; \ &nbsp;&nbsp;contact
           </div>
         </div>
       </div>
+      <div class="h-[390px] md:h-[572px] w-full">
+        <img
+          class="w-full h-full object-cover absolute left-0 top-0 z-0"
+          src="./assets/img/image2.jpg"
+          alt="About"
+        />
+      </div>
+      <div
+        class="holder absolute z-20 w-full space-y-4 bottom-6 md:bottom-14 pl-7"
+        data-scroll=""
+      >
+        <h1 class="text-white">Contact</h1>
+      </div>
     </section>
+    <!-- End of the banner block -->
 
-    <section class="py-8">
-      <div class="holder">
-        <div class="grid lg:grid-cols-2 items-center gap-30 lg:gap-16">
-          <div class="space-y-3 order-2 md:order-1">
-            <h2 class="text-black tracking-[0.7px] uppercase">Ishtiak Sami</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
-              esse provident quos, tempora, molestiae molestias nam magnam
-              commodi cum placeat blanditiis quas. Quo velit reprehenderit at ad
-              nesciunt itaque obcaecati ex incidunt fugiat animi tempore sunt
-              possimus corrupti, sed dolores!
-            </p>
-
-            <div class="pt-3 flex items-center flex-wrap gap-30">
-              <a href="#" class="btn uppercase">about me </a>
-            </div>
+    <section class="py-8 bg-black text-white">
+      <div class="holder grid md:grid-cols-2 items-center gap-8 md:gap-11">
+        <div class="space-y-30 relative max-w-md">
+          <h2 class="uppercase">Where to find us</h2>
+          <div class="md:[&>p]:text-27 [&>p]:leading-[160%]">
+            <p>Get in touch with our commercial team.</p>
           </div>
+        </div>
 
-          <div class="aspect-[670/427] md:order-2 order-1">
-            <img
-              src="./assets/img/image5.jpg"
-              alt="The Calendar"
-              class="w-full h-full object-cover"
+        <div class="space-y-6">
+          <form action="" class="space-y-4 [&>*]:bg-black">
+            <input
+              class="border border-white p-6 w-full placeholder:text-base placeholder:leading-[140%] placeholder:-tracking-[0.16px] placeholder:font-normal placeholder:text-white placeholder:font-BBCReithSans"
+              type="text"
+              id="Full name"
+              name="Full name"
+              placeholder="Full name"
             />
+
+            <input
+              class="border border-white p-6 w-full placeholder:text-base placeholder:leading-[140%] placeholder:-tracking-[0.16px] placeholder:font-normal placeholder:text-white placeholder:font-BBCReithSans"
+              type="text"
+              id="Email address"
+              name="Email address"
+              placeholder="Email address"
+            />
+
+            <textarea
+              class="border border-white p-6 w-full placeholder:text-base placeholder:leading-[140%] placeholder:-tracking-[0.16px] placeholder:font-normal placeholder:text-white placeholder:font-BBCReithSans"
+              placeholder="message"
+              rows="5"
+            ></textarea>
+          </form>
+
+          <div class="gap-30 flex flex-wrap items-center">
+            <a
+              href="#"
+              class="btn-white flex items-center gap-10 group text-white"
+            >
+              Send message
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="41"
+                height="10"
+                viewBox="0 0 41 10"
+                fill="none"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M39.0946 4.47949L0 4.47949V5.52116L39.0951 5.52116L37.1992 7.56283L37.9625 8.27163L41 5.00056L37.9625 1.72949L37.1992 2.4383L39.0946 4.47949Z"
+                  fill="white"
+                ></path>
+              </svg>
+            </a>
           </div>
         </div>
       </div>
